--- a/style.css
+++ b/style.css
@@ -95,8 +95,8 @@ h2 {
   left: 0;
   width: 100%;
   height: 100%;
-  /* FIX 1: Opacity set to 0.65 for increased image visibility */
-  background-color: rgba(45, 30, 15, 0.65); 
+  /* FIX 1: Opacity set to 0.75 for improved text readability */
+  background-color: rgba(45, 30, 15, 0.75); 
   z-index: 1;
 }
 .hero-content {
